--- a/dist.ini
+++ b/dist.ini
@@ -1,30 +1,14 @@
-version = 0.130
+version = 0.001
 
 name    = JSON-Encode-TableData
-
-[ColorTheme]
 
 [@Author::PERLANCAR]
 :version=0.600
 
 [Prereqs]
-perl=5.010001
-parent=0
 strict=0
 warnings=0
-Color::ANSI::Util=0.164
-ColorThemeBase::Static::FromStructColors=0.006
+Data::Check::Structure=0
 Exporter=5.57
-Graphics::ColorNamesLite::WWW=0
-Module::Load::Util=0
-Role::Tiny=0
-Term::ANSIColor=3.00
-
-[Prereqs / RuntimeRecommends]
-Scalar::Util::LooksLikeNumber=0
-
-[Prereqs / DevelopX_spec]
--phase=develop
--relationship=x_spec
-ColorTheme=2.1.0
-
+JSON::MaybeXS=0
+UUID::Random=0
